[package]
name = "tiny-expr-tree"
version = "0.1.0"
edition = "2024"

[dependencies]
mask-tracked-array = { version = "0.1.0", git = "https://github.com/Eisverygoodletter/mask-tracked-array", features = ["num_traits"]}
num-traits = { version = "0.2.19", default-features = false }
[features]
alloc-gen = []
